--- a/public/main.css
+++ b/public/main.css
@@ -46,7 +46,7 @@ body{
 } */
 .alert-element{
    position: absolute;
-   top: 50px;
+   top: 20px;
    padding: 10px 20px;
    background-color: #fff;
    color: #000;
@@ -154,20 +154,24 @@ body{
 ===================================== Sign in form ============================
 */
 
-.sign-form {
+.sign-form{
+   display: flex;
+}
+.sign-form.hide, .login-form.hide{
    display: none;
 }
-.login-form {
+.login-form{
    display: flex;
+}
+.login-page.hide{
+   display: none;
 }
 
 /*
 ===================================== Cabinet ============================
 */
 
-/* .enter-page{
-   display: none;
-} */
+
 .cabinet{
    width: 100%;
    height: 100vh;
@@ -177,6 +181,8 @@ body{
    gap: 30px;
    align-items: center;
    flex-direction: column;
+}
+.cabinet.hide{
    display: none;
 }
 .logout-btn{
@@ -185,3 +191,13 @@ body{
    cursor: pointer;
 }
 
+.user-information{
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+}
+.user-information .item{
+   display: flex;
+   gap: 30px;
+   font-size: 22px;
+}
